--- a/sub.html
+++ b/sub.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Project2_sub1</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
